Finished most of the calendar functionality.

--- a/app/project/planner/static/planner/styles/_calendar.scss
+++ b/app/project/planner/static/planner/styles/_calendar.scss
@@ -152,11 +152,18 @@
 
         input {
           background-color: #ffffff00;
+          font-weight: bold;
           height: 40px;
           padding: 0 16px;
           outline: none;
           border: none;
           cursor: pointer;
+
+          &:hover {
+            background-color: $orange;
+            color: $white;
+            
+          }
         }
 
         button {
