--- a/app/project/planner/templates/planner/calendar.html
+++ b/app/project/planner/templates/planner/calendar.html
@@ -74,8 +74,8 @@
         </div>
         <div class="selectDate-today">
           <div class="selectDate">
-            <input type="month" name="selectDatePicker" id="selectDatePicker">
-            <button class="selectDate-btn">go</button>
+            <input type="month" name="selectDatePicker" id="selectDatePicker" />
+            <!-- <button class="selectDate-btn">go</button> -->
           </div>
           <button class="today-btn">today</button>
         </div>
