--- a/app/project/planner/templates/planner/calendar.html
+++ b/app/project/planner/templates/planner/calendar.html
@@ -14,7 +14,7 @@
   <!-- <a href="{% url 'tennis:tennis' %}"
     ><button class="view-tennis-sessions-btn">View Tennis Sessions</button></a
   > -->
-  <div id="TennisSessions">{{ tennis_sessions }}</div>
+  <div id="TennisSessions" style="display: none">{{ tennis_sessions }}</div>
   <section class="calendar-section">
     <div class="undecided">
       <div class="calendar">
