--- a/app/project/planner/static/planner/styles/styles.css
+++ b/app/project/planner/static/planner/styles/styles.css
@@ -143,6 +143,7 @@ a {
 }
 .calendar-section .calendar .days .prev-date, .calendar-section .calendar .days .next-date {
   color: #B3B3B3;
+  cursor: default;
 }
 .calendar-section .calendar .days .today {
   font-size: 2.2rem;
