Managed to get some of the calendar functionality working.

--- a/app/project/planner/templates/planner/calendar.html
+++ b/app/project/planner/templates/planner/calendar.html
@@ -81,6 +81,12 @@
         </div>
       </div>
     </div>
+    <div class="undecided">
+      <aside class="side-panel" id="sidePanel">
+        <!-- Content will be dynamically populated here based on user interactions -->
+        <p>Hello</p>
+      </aside>
+    </div>
   </section>
 </main>
 {% endblock %}
