--- a/app/project/planner/static/planner/styles/styles.css
+++ b/app/project/planner/static/planner/styles/styles.css
@@ -231,6 +231,9 @@ a {
   background-color: rgba(255, 255, 255, 0);
   border: 1px solid #ee7d2c;
 }
+.calendar-section .side-panel {
+  display: none;
+}
 
 @media only screen and (max-width: 400px) {
   .calendar-section .calendar .selectDate-today {
