--- a/app/project/planner/static/planner/styles/styles.css
+++ b/app/project/planner/static/planner/styles/styles.css
@@ -233,6 +233,15 @@ a {
 }
 .calendar-section .side-panel {
   display: none;
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 300px;
+  height: 100%;
+  background-color: #f4f4f4;
+  overflow-y: auto;
+  padding: 20px;
+  box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1);
 }
 
 @media only screen and (max-width: 400px) {
