--- a/app/project/planner/templates/planner/calendar.html
+++ b/app/project/planner/templates/planner/calendar.html
@@ -130,7 +130,7 @@
   <!-- Add modal for editing, deleting, and adding tennis sessions -->
   <div id="editModal" class="modal">
     <div class="modal-content">
-      <span class="close-btn" onclick="closeModal()">&times;</span>
+      <span class="close-btn" onclick="closeModal('#editModal')">&times;</span>
       <div id="modalContent">
         <form action="" method="post" novalidate>
           {% csrf_token %}
@@ -144,10 +144,27 @@
       </div>
     </div>
   </div>
+
+  <div id="addModal" class="modal">
+    <div class="modal-content">
+      <span class="close-btn" onclick="closeModal('#addModal')">&times;</span>
+      <div id="modalContent">
+        <form action="" method="post" novalidate>
+          {% csrf_token %}
+          {{ form.as_p }}
+          <div style="display: none;">
+            <label for="session-id">ID: </label>
+            <input type="hidden" type="text" name="session-id" id="session-id" value="X">
+          </div>
+          <input class="btn" type="submit" value="Add Tennis Session">
+        </form>
+      </div>
+    </div>
+  </div>
 </main>
 <script>
-  function closeModal() {
-    const closeBtn = document.querySelector("#editModal");
+  function closeModal(id) {
+    const closeBtn = document.querySelector(id);
     closeBtn.style.display = "none";
   }
 </script>
