--- a/app/project/planner/static/planner/styles/_calendar.scss
+++ b/app/project/planner/static/planner/styles/_calendar.scss
@@ -227,3 +227,40 @@
     }
   }
 }
+
+// Modal styles
+.modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  justify-content: center;
+  align-items: center;
+
+  .modal-content {
+    background-color: #fefefe;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    max-width: 400px;
+    margin: 0 auto;
+
+    .close-btn {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      cursor: pointer;
+      font-size: 3rem;
+    }
+
+    #modal-content input, textarea {
+      width: 70%;
+    }
+  }
+}
+
+
+
