--- a/app/project/planner/templates/planner/calendar.html
+++ b/app/project/planner/templates/planner/calendar.html
@@ -8,50 +8,12 @@
   crossorigin="anonymous"
   referrerpolicy="no-referrer"
 />
-<style>
-  /* Add your styles for the modal here */
-  .modal {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
-    justify-content: center;
-    align-items: center;
-  }
-
-  .modal-content {
-    background-color: #fefefe;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    max-width: 400px;
-    margin: 0 auto;
-  }
-
-  #modal-content input, textarea {
-    width: 70%;
-  }
-
-  .close-btn {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    cursor: pointer;
-  }
-</style>
 {% endblock %} 
 {% block scripts %}
 <script src="{% static './planner/scripts/calendar.js' %}" defer></script>
 {% endblock %} 
 {% block content %}
 <main>
-  <!-- <h2>Calendar</h2> -->
-  <!-- <a href="{% url 'tennis:tennis' %}"
-    ><button class="view-tennis-sessions-btn">View Tennis Sessions</button></a
-  > -->
   <div id="TennisSessions" style="display: none">{{ tennis_sessions }}</div>
   <section class="calendar-section">
     <div class="undecided">
@@ -127,7 +89,7 @@
     </div>
   </section>
 
-  <!-- Add modal for editing, deleting, and adding tennis sessions -->
+  <!-- Modals for editing, deleting, and adding tennis sessions -->
   <div id="editModal" class="modal">
     <div class="modal-content">
       <span class="close-btn" onclick="closeModal('#editModal')">&times;</span>
