--- a/app/project/planner/static/planner/styles/_calendar.scss
+++ b/app/project/planner/static/planner/styles/_calendar.scss
@@ -225,8 +225,21 @@
         gap: 24px;
       }
     }
+
+    .side-panel {
+      width: 70%;
+    }
   }
 }
+
+@media only screen and (max-width: 350px) {
+  .calendar-section {
+    .side-panel {
+      width: 80%;
+    }
+  }
+}
+
 
 // Modal styles
 .modal {
@@ -249,16 +262,44 @@
     margin: 0 auto;
 
     .close-btn {
-      position: absolute;
-      top: 10px;
-      right: 10px;
+      display: flex;
+      justify-content: flex-end;
       cursor: pointer;
       font-size: 3rem;
     }
 
-    #modal-content input, textarea {
-      width: 70%;
+    form {
+      p {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        gap: 8px;
+        align-items: flex-start;
+      }
+
+      input, textarea {
+        width: 100%;
+        height: 2rem;
+        font-size: 0.9rem;
+      }
+
+      input#id_is_completed {
+        width: 30px;
+      }
+  
+      textarea {
+        height: 200px;
+      }
+  
+      label {
+        font-size: 1.2rem;
+        font-weight: bold;
+        width: 100%;
+      }
     }
+
+    
+
   }
 }
 
