--- a/app/project/planner/static/planner/styles/styles.css
+++ b/app/project/planner/static/planner/styles/styles.css
@@ -250,6 +250,14 @@ a {
     justify-content: space-between;
     gap: 24px;
   }
+  .calendar-section .side-panel {
+    width: 70%;
+  }
+}
+@media only screen and (max-width: 350px) {
+  .calendar-section .side-panel {
+    width: 80%;
+  }
 }
 .modal {
   display: none;
@@ -271,12 +279,31 @@ a {
   margin: 0 auto;
 }
 .modal .modal-content .close-btn {
-  position: absolute;
-  top: 10px;
-  right: 10px;
+  display: flex;
+  justify-content: flex-end;
   cursor: pointer;
   font-size: 3rem;
 }
-.modal .modal-content #modal-content input, .modal .modal-content textarea {
-  width: 70%;
+.modal .modal-content form p {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  gap: 8px;
+  align-items: flex-start;
+}
+.modal .modal-content form input, .modal .modal-content form textarea {
+  width: 100%;
+  height: 2rem;
+  font-size: 0.9rem;
+}
+.modal .modal-content form input#id_is_completed {
+  width: 30px;
+}
+.modal .modal-content form textarea {
+  height: 200px;
+}
+.modal .modal-content form label {
+  font-size: 1.2rem;
+  font-weight: bold;
+  width: 100%;
 }/*# sourceMappingURL=styles.css.map */
