--- a/app/project/planner/static/planner/styles/_calendar.scss
+++ b/app/project/planner/static/planner/styles/_calendar.scss
@@ -212,6 +212,28 @@
     overflow-y: auto;
     padding: 20px;
     box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1);
+
+    flex-direction: column;
+    gap: 24px;
+    align-items: center;
+
+    .side-panel-close-btn {
+      align-self: flex-end;
+
+      background-color: #00000000;
+      color: #000000;
+      font-size: 3rem;
+    }
+
+    .side-panel-session-div {
+      background-color: #FFFFFF;
+      border: 1px solid #000000;
+      border-radius: 8px;
+
+      span {
+        font-weight: bold;
+      }
+    }
   }
 }
 
