--- a/app/project/planner/static/planner/styles/styles.css
+++ b/app/project/planner/static/planner/styles/styles.css
@@ -242,6 +242,23 @@ a {
   overflow-y: auto;
   padding: 20px;
   box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1);
+  flex-direction: column;
+  gap: 24px;
+  align-items: center;
+}
+.calendar-section .side-panel .side-panel-close-btn {
+  align-self: flex-end;
+  background-color: rgba(0, 0, 0, 0);
+  color: #000000;
+  font-size: 3rem;
+}
+.calendar-section .side-panel .side-panel-session-div {
+  background-color: #FFFFFF;
+  border: 1px solid #000000;
+  border-radius: 8px;
+}
+.calendar-section .side-panel .side-panel-session-div span {
+  font-weight: bold;
 }
 
 @media only screen and (max-width: 400px) {
