--- a/app/project/registration/templates/registration/base.html
+++ b/app/project/registration/templates/registration/base.html
@@ -39,6 +39,26 @@
         padding: 8px 16px;
       }
 
+      button.edit-btn {
+        background-color: #ee7d2c;
+        border: 1px solid #ee7d2c;
+      }
+
+      button.edit-btn:hover {
+        background-color: #00000000;
+          color: #000000;
+      }
+
+      button.delete-btn {
+        background-color: crimson;
+        border: 1px solid crimson;
+      }
+
+      button.delete-btn:hover {
+        background-color: #00000000;
+          color: #000000;
+      }
+
       button:hover,
       .btn:hover {
         cursor: pointer;
