--- a/app/project/planner/static/planner/styles/_calendar.scss
+++ b/app/project/planner/static/planner/styles/_calendar.scss
@@ -208,7 +208,8 @@
     right: 0;
     width: 300px;
     height: 100%;
-    background-color: #f4f4f4;
+    // background-color: #f4f4f4;
+    background-color: #dddde0;
     overflow-y: auto;
     padding: 20px;
     box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1);
@@ -227,11 +228,35 @@
 
     .side-panel-session-div {
       background-color: #FFFFFF;
-      border: 1px solid #000000;
+
+      border: 1px solid #00000008;
+      box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1);
       border-radius: 8px;
+
+      padding: 0 8px;
 
       span {
         font-weight: bold;
+      }
+
+      button.edit-session-btn {
+        background-color: $orange;
+        border: 1px solid $orange;
+
+        &:hover {
+          background-color: #00000000;
+          color: #000000;
+        }
+      }
+
+      button.delete-session-btn {
+        background-color: crimson;
+        border: 1px solid crimson;
+
+        &:hover {
+          background-color: #00000000;
+          color: #000000;
+        }
       }
     }
   }
