--- a/app/project/planner/static/planner/styles/_calendar.scss
+++ b/app/project/planner/static/planner/styles/_calendar.scss
@@ -150,6 +150,7 @@
         justify-content: center;
         border: 1px solid $orange;
         border-radius: 8px;
+        cursor: pointer;
 
         input {
           background-color: #ffffff00;
