--- a/app/project/planner/static/planner/styles/styles.css
+++ b/app/project/planner/static/planner/styles/styles.css
@@ -191,6 +191,7 @@ a {
   justify-content: center;
   border: 1px solid #ee7d2c;
   border-radius: 8px;
+  cursor: pointer;
 }
 .calendar-section .calendar .selectDate-today .selectDate input {
   background-color: rgba(255, 255, 255, 0);
