--- a/app/project/registration/templates/registration/base.html
+++ b/app/project/registration/templates/registration/base.html
@@ -114,6 +114,9 @@
           <a href="{% url 'planner:calendar' %}">
             <li>Calendar</li>
           </a>
+          <a href="{% url 'community:connect' %}">
+            <li>Connect</li>
+          </a>
           {% endif %}
         </ul>
       </div>
