--- a/app/project/community/templates/community/connect.html
+++ b/app/project/community/templates/community/connect.html
@@ -2,7 +2,7 @@
 {% load static %} 
 {% block content %}
 <main>
-  <h2>Onboarding</h2>
+  <h2>Connect</h2>
   <p>Not implemented yet.</p>
 </main>
 {% endblock %}
