Updated the calendar styling.

--- a/app/project/planner/static/planner/styles/_calendar.scss
+++ b/app/project/planner/static/planner/styles/_calendar.scss
@@ -229,6 +229,7 @@
 
     .side-panel-session-div {
       background-color: #FFFFFF;
+      width: 90%;
 
       border: 1px solid #00000008;
       box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1);
