Adding links to the nav.

--- a/app/project/community/templates/community/base.html
+++ b/app/project/community/templates/community/base.html
@@ -23,6 +23,9 @@
           <a href="{% url 'tennis:tennis' %}">
             <li>Tennis</li>
           </a>
+          <a href="{% url 'tennis:learn' %}">
+            <li>Learn</li>
+          </a>
           <a href="{% url 'planner:calendar' %}">
             <li>Calendar</li>
           </a>
