--- a/app/project/registration/templates/registration/base.html
+++ b/app/project/registration/templates/registration/base.html
@@ -111,6 +111,9 @@
           <a href="{% url 'tennis:tennis' %}">
             <li>Tennis</li>
           </a>
+          <a href="{% url 'tennis:learn' %}">
+            <li>Learn</li>
+          </a>
           <a href="{% url 'planner:calendar' %}">
             <li>Calendar</li>
           </a>
