Adding feed and profile pages.

--- a/app/project/registration/templates/registration/base.html
+++ b/app/project/registration/templates/registration/base.html
@@ -120,6 +120,12 @@
           <a href="{% url 'community:connect' %}">
             <li>Connect</li>
           </a>
+          <a href="{% url 'community:feed' %}">
+            <li>Feed</li>
+          </a>
+          <a href="{% url 'community:profile' %}">
+            <li>Profile</li>
+          </a>
           {% endif %}
         </ul>
       </div>
