--- a/app/project/planner/templates/planner/base.html
+++ b/app/project/planner/templates/planner/base.html
@@ -32,6 +32,12 @@
           <a href="{% url 'community:connect' %}">
             <li>Connect</li>
           </a>
+          <a href="{% url 'community:feed' %}">
+            <li>Feed</li>
+          </a>
+          <a href="{% url 'community:profile' %}">
+            <li>Profile</li>
+          </a>
           {% endif %}
         </ul>
       </div>
