--- a/app/project/community/static/community/styles/styles.css
+++ b/app/project/community/static/community/styles/styles.css
@@ -69,4 +69,79 @@ a {
     flex-direction: column;
     align-items: center;
   }
+}
+main#profile div.profile-top {
+  padding: 16px 32px;
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+main#profile div.profile-top div.profile-header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 32px;
+}
+main#profile div.profile-top div.profile-header .profile-photo img {
+  width: 150px;
+  height: 150px;
+}
+main#profile div.profile-top div.profile-header .profile-username-action-btns {
+  display: flex;
+  flex-direction: column;
+}
+main#profile div.profile-top div.profile-header .profile-username-action-btns .profile-username {
+  font-size: 1.6rem;
+  margin: 0;
+}
+main#profile div.profile-top div.profile-header .profile-username-action-btns .profile-action-btns button {
+  margin-bottom: 0px;
+  background-color: #EFEFEF;
+  color: #000000;
+}
+main#profile div.profile-top div.profile-header .profile-username-action-btns .profile-action-btns button:hover {
+  background-color: #d7d4d4;
+}
+main#profile div.profile-top div.info {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+main#profile div.profile-top div.info .profile-name {
+  font-weight: bold;
+}
+main#profile div.profile-top .followers-following {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+}
+main#profile div.profile-top .followers-following div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+main#profile div.profile-top .followers-following div .ff-text {
+  font-size: 0.8rem;
+  color: #3D3D3D;
+}
+main#profile div.profile-top .followers-following div .ff-count {
+  font-size: 1.5rem;
+}
+
+@media only screen and (max-width: 400px) {
+  main#profile div.profile-top {
+    padding: 12px 16px;
+  }
+  main#profile div.profile-top div.profile-header {
+    gap: 16px;
+  }
+  main#profile div.profile-top div.profile-header .profile-photo img {
+    width: 80px;
+    height: 80px;
+  }
+  main#profile div.profile-top div.profile-header .profile-username-action-btns .profile-username {
+    font-size: 1.3rem;
+  }
 }/*# sourceMappingURL=styles.css.map */
