--- a/app/project/community/templates/community/profile.html
+++ b/app/project/community/templates/community/profile.html
@@ -39,12 +39,12 @@
   </div>
   <div class="toggle-feed-view">...</div>
   <div class="feed">
-    <div class="feed-post">1</div>
-    <div class="feed-post">2</div>
-    <div class="feed-post">3</div>
-    <div class="feed-post">4</div>
-    <div class="feed-post">5</div>
-    <div class="feed-post">6</div>
+    <div class="feed-post"></div>
+    <div class="feed-post"></div>
+    <div class="feed-post"></div>
+    <div class="feed-post"></div>
+    <div class="feed-post"></div>
+    <div class="feed-post"></div>
   </div>
 </main>
 {% endblock %}
