Adding the icons.

--- a/app/project/community/templates/community/profile.html
+++ b/app/project/community/templates/community/profile.html
@@ -37,7 +37,17 @@
       </div>
     </div>
   </div>
-  <div class="toggle-feed-view">...</div>
+  <div class="toggle-feed-view">
+    <button>
+      <img src="{% static './community/images/menu.png' %}" alt="" />
+    </button>
+    <button>
+      <img
+        src="{% static './community/images/achievements-icon.png' %}"
+        alt=""
+      />
+    </button>
+  </div>
   <div class="feed">
     <div class="feed-post"></div>
     <div class="feed-post"></div>
