--- a/app/project/community/static/community/styles/styles.css
+++ b/app/project/community/static/community/styles/styles.css
@@ -129,6 +129,31 @@ main#profile div.profile-top .followers-following div .ff-text {
 main#profile div.profile-top .followers-following div .ff-count {
   font-size: 1.5rem;
 }
+main#profile .toggle-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 24px 0;
+}
+main#profile .toggle-container .toggle-feed-view {
+  background-color: #8F8E8E;
+  width: -moz-fit-content;
+  width: fit-content;
+  padding: 8px 16px;
+  border-radius: 8px;
+  border: 1px solid #000000;
+}
+main#profile .toggle-container .toggle-feed-view button.active {
+  background-color: #32ca6f;
+}
+main#profile .toggle-container .toggle-feed-view button {
+  background-color: #FFFFFF;
+  border: 1px solid #000000;
+  margin-bottom: 0px;
+}
+main#profile .toggle-container .toggle-feed-view button:hover {
+  background-color: #32ca6f;
+}
 main#profile .feed {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
