--- a/app/project/community/templates/community/profile.html
+++ b/app/project/community/templates/community/profile.html
@@ -55,13 +55,40 @@
       </button>
     </div>
   </div>
-  <div class="feed">
+  <div class="feed" style="display: none;">
     <div class="feed-post"></div>
     <div class="feed-post"></div>
     <div class="feed-post"></div>
     <div class="feed-post"></div>
     <div class="feed-post"></div>
     <div class="feed-post"></div>
+  </div>
+
+  <div class="achievements">
+    <div class="award">
+      <div class="award-img"></div>
+      <div class="award-info">
+        <p class="award-name">Award Name</p>
+        <p class="award-desc">Award description goes here...</p>
+        <p class="award-date">Awarded DD-MM-YYYY</p>
+      </div>
+    </div>
+    <div class="award">
+      <div class="award-img"></div>
+      <div class="award-info">
+        <p class="award-name">Award Name</p>
+        <p class="award-desc">Award description goes here...</p>
+        <p class="award-date">Awarded DD-MM-YYYY</p>
+      </div>
+    </div>
+    <div class="award">
+      <div class="award-img"></div>
+      <div class="award-info">
+        <p class="award-name">Award Name</p>
+        <p class="award-desc">Award description goes here...</p>
+        <p class="award-date">Awarded DD-MM-YYYY</p>
+      </div>
+    </div>
   </div>
 </main>
 {% endblock %}
