--- a/app/project/community/static/community/styles/_profile.scss
+++ b/app/project/community/static/community/styles/_profile.scss
@@ -124,6 +124,38 @@ main#profile {
       border: 1px solid $black;
     }
   }
+
+  .achievements {
+    .award {
+      display: flex;
+      align-items: center;
+      gap: 12px;
+
+      border: 1px solid $black;
+      border-radius: 8px;
+      width: max-content;
+      padding: 8px 16px;
+      background-color: $posts;
+
+      .award-img {
+        background-color: lightblue;
+        width: 100px;
+        height: 100px;
+        border-radius: 8px;
+        border: 1px solid $black;
+      }
+
+      .award-info {
+        .award-name {
+          font-weight: 700;
+        }
+
+        .award-date {
+          font-weight: 300;
+        }
+      }
+    }
+  }
 }
 
 @media only screen and (max-width: 400px) {
