--- a/app/project/community/static/community/styles/styles.css
+++ b/app/project/community/static/community/styles/styles.css
@@ -169,6 +169,30 @@ main#profile .feed .feed-post {
   border-radius: 8px;
   border: 1px solid #000000;
 }
+main#profile .achievements .award {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  border: 1px solid #000000;
+  border-radius: 8px;
+  width: -moz-max-content;
+  width: max-content;
+  padding: 8px 16px;
+  background-color: #F2F2F2;
+}
+main#profile .achievements .award .award-img {
+  background-color: lightblue;
+  width: 100px;
+  height: 100px;
+  border-radius: 8px;
+  border: 1px solid #000000;
+}
+main#profile .achievements .award .award-info .award-name {
+  font-weight: 700;
+}
+main#profile .achievements .award .award-info .award-date {
+  font-weight: 300;
+}
 
 @media only screen and (max-width: 400px) {
   main#profile div.profile-top {
