--- a/app/project/community/static/community/styles/_profile.scss
+++ b/app/project/community/static/community/styles/_profile.scss
@@ -164,6 +164,10 @@ main#profile {
       }
     }
   }
+
+  .toggle-posts {
+     display: none;
+  }
 }
 
 @media only screen and (max-width: 400px) {
