--- a/app/project/community/static/community/styles/styles.css
+++ b/app/project/community/static/community/styles/styles.css
@@ -200,6 +200,9 @@ main#profile .achievements .award .award-info .award-name {
 main#profile .achievements .award .award-info .award-date {
   font-weight: 300;
 }
+main#profile .toggle-posts {
+  display: none;
+}
 
 @media only screen and (max-width: 400px) {
   main#profile div.profile-top {
