--- a/app/project/community/templates/community/feed.html
+++ b/app/project/community/templates/community/feed.html
@@ -3,6 +3,18 @@
 {% block content %}
 <main>
   <h2>Feed</h2>
-  <p>Not implemented yet.</p>
+  <div class="posts">
+    <div class="post">
+      <div class="post-img"></div>
+      <div class="post-btns"></div>
+      <div class="post-likes"></div>
+      <div class="post-caption">
+        <span class="username">username</span>
+        <span class="caption-text">caption text will be placed...</span>
+      </div>
+      <div class="post-comments"></div>
+      <div class="post-date"></div>
+    </div>
+  </div>
 </main>
 {% endblock %}
