--- a/app/project/community/static/community/styles/styles.css
+++ b/app/project/community/static/community/styles/styles.css
@@ -224,4 +224,25 @@ main#profile .toggle-posts {
   main#profile .achievements .award .award-img {
     width: 100%;
   }
+}
+main#feed .posts .post {
+  border-radius: 8px;
+  border: 1px solid #000000;
+  width: -moz-max-content;
+  width: max-content;
+}
+main#feed .posts .post .post-img {
+  width: 100%;
+  height: 200px;
+  background-color: lightblue;
+  border-radius: 8px 8px 0 0;
+  border-bottom: 1px solid #000000;
+}
+main#feed .posts .post .post-btns {
+  display: flex;
+  gap: 12px;
+}
+main#feed .posts .post .post-btns button {
+  background-color: rgba(255, 255, 255, 0);
+  padding: 0;
 }/*# sourceMappingURL=styles.css.map */
