--- a/app/project/community/templates/community/feed.html
+++ b/app/project/community/templates/community/feed.html
@@ -1,7 +1,7 @@
 {% extends './base.html' %} 
 {% load static %} 
 {% block content %}
-<main>
+<main id="feed">
   <h2>Feed</h2>
   <div class="posts">
     <div class="post">
