--- a/app/project/community/static/community/styles/styles.css
+++ b/app/project/community/static/community/styles/styles.css
@@ -230,6 +230,7 @@ main#feed .posts .post {
   border: 1px solid #000000;
   width: -moz-max-content;
   width: max-content;
+  padding-bottom: 12px;
 }
 main#feed .posts .post .post-img {
   width: 100%;
@@ -241,8 +242,35 @@ main#feed .posts .post .post-img {
 main#feed .posts .post .post-btns {
   display: flex;
   gap: 12px;
+  padding: 8px;
 }
 main#feed .posts .post .post-btns button {
   background-color: rgba(255, 255, 255, 0);
   padding: 0;
+  margin: 0;
+}
+main#feed .posts .post .post-btns button img {
+  width: 20px;
+  height: 20px;
+}
+main#feed .posts .post .post-likes, main#feed .posts .post .post-caption,
+main#feed .posts .post .post-comments, main#feed .posts .post .post-date {
+  padding: 0 8px;
+}
+main#feed .posts .post .post-caption {
+  margin: 12px 0;
+}
+main#feed .posts .post .post-caption .username {
+  font-weight: 700;
+}
+main#feed .posts .post .post-comments {
+  font-size: 0.9rem;
+}
+main#feed .posts .post .post-comments:hover {
+  cursor: pointer;
+}
+main#feed .posts .post .post-date {
+  font-weight: 300;
+  font-size: 0.8rem;
+  padding-top: 8px;
 }/*# sourceMappingURL=styles.css.map */
