--- a/app/project/community/templates/community/feed.html
+++ b/app/project/community/templates/community/feed.html
@@ -10,7 +10,7 @@
         <button class="post-like-btn"><img src="{% static './community/images/like-icon.svg'%}" alt="like button"></button>
         <button class="post-comment-btn"><img src="{% static './community/images/comments-icon.svg'%}" alt="comment button"></button>
       </div>
-      <div class="post-likes"></div>
+      <div class="post-likes"><span class="like-count">124</span> likes</div>
       <div class="post-caption">
         <span class="username">username</span>
         <span class="caption-text">caption text will be placed...</span>
