--- a/app/project/community/static/community/styles/_feed.scss
+++ b/app/project/community/static/community/styles/_feed.scss
@@ -1,5 +1,10 @@
 main#feed {
   .posts {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 24px;
+
     .post {
       border-radius: 8px;
       border: 1px solid $black;
@@ -8,8 +13,10 @@ main#feed {
       padding-bottom: 12px;
 
       .post-img {
-        width: 100%;
-        height: 200px;
+        width: 45vw;
+        min-width: 300px;
+        height: 30vw;
+        min-height: 200px;
         background-color: lightblue;
         border-radius: 8px 8px 0 0;
         border-bottom: 1px solid $black;
