--- a/app/project/community/static/community/styles/styles.css
+++ b/app/project/community/static/community/styles/styles.css
@@ -225,6 +225,12 @@ main#profile .toggle-posts {
     width: 100%;
   }
 }
+main#feed .posts {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 24px;
+}
 main#feed .posts .post {
   border-radius: 8px;
   border: 1px solid #000000;
@@ -233,8 +239,10 @@ main#feed .posts .post {
   padding-bottom: 12px;
 }
 main#feed .posts .post .post-img {
-  width: 100%;
-  height: 200px;
+  width: 45vw;
+  min-width: 300px;
+  height: 30vw;
+  min-height: 200px;
   background-color: lightblue;
   border-radius: 8px 8px 0 0;
   border-bottom: 1px solid #000000;
