--- a/app/project/community/templates/community/feed.html
+++ b/app/project/community/templates/community/feed.html
@@ -1,5 +1,8 @@
 {% extends './base.html' %} 
 {% load static %} 
+{% block scripts %}
+<script src="{% static './community/scripts/toggle-like.js' %}" defer></script>
+{% endblock %}
 {% block content %}
 <main id="feed">
   <h2>Feed</h2>
