--- a/app/project/community/static/community/styles/_profile.scss
+++ b/app/project/community/static/community/styles/_profile.scss
@@ -175,6 +175,68 @@ main#profile {
   .toggle-posts {
      display: none;
   }
+
+  // Modal styles
+.modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  justify-content: center;
+  align-items: center;
+
+  .modal-content {
+    background-color: #fefefe;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    max-width: 400px;
+    margin: 0 auto;
+
+    .close-btn {
+      display: flex;
+      justify-content: flex-end;
+      cursor: pointer;
+      font-size: 3rem;
+    }
+
+    // form {
+    //   p {
+    //     display: flex;
+    //     flex-direction: column;
+    //     justify-content: flex-start;
+    //     gap: 8px;
+    //     align-items: flex-start;
+    //   }
+
+    //   input, textarea {
+    //     width: 100%;
+    //     height: 2rem;
+    //     font-size: 0.9rem;
+    //   }
+
+    //   input#id_is_completed {
+    //     width: 30px;
+    //   }
+  
+    //   textarea {
+    //     height: 200px;
+    //   }
+  
+    //   label {
+    //     font-size: 1.2rem;
+    //     font-weight: bold;
+    //     width: 100%;
+    //   }
+    // }
+
+    
+
+  }
+}
 }
 
 @media only screen and (max-width: 400px) {
