--- a/app/project/community/templates/community/profile.html
+++ b/app/project/community/templates/community/profile.html
@@ -2,6 +2,7 @@
 {% load static %} 
 {% block scripts %}
 <script src="{% static './community/scripts/toggle-posts.js' %}" defer></script>
+<script src="{% static './community/scripts/view-post.js' %}" defer></script>
 {% endblock %}
 {% block content %}
 <main id="profile">
@@ -100,5 +101,30 @@
       </div>
     </div>
   </div>
+
+    <!-- Modals for viewing the post -->
+    <div id="viewPostModal" class="modal">
+      <div class="modal-content">
+        <span class="close-btn" onclick="closeModal('#viewPostModal')">&times;</span>
+        <div id="modalContent">
+          <!-- <form action="" method="post" novalidate>
+            {% csrf_token %}
+            {{ form.as_p }}
+            <div style="display: none;">
+              <label for="session-id">ID: </label>
+              <input type="hidden" type="text" name="session-id" id="session-id" value="X">
+            </div>
+            <input class="btn" type="submit" value="Edit Tennis Session">
+          </form> -->
+          <p>Hello World</p>
+        </div>
+      </div>
+    </div>
 </main>
+<script>
+  function closeModal(id) {
+    const closeBtn = document.querySelector(id);
+    closeBtn.style.display = "none";
+  }
+</script>
 {% endblock %}
