--- a/app/project/community/static/community/styles/_profile.scss
+++ b/app/project/community/static/community/styles/_profile.scss
@@ -203,37 +203,7 @@ main#profile {
       font-size: 3rem;
     }
 
-    // form {
-    //   p {
-    //     display: flex;
-    //     flex-direction: column;
-    //     justify-content: flex-start;
-    //     gap: 8px;
-    //     align-items: flex-start;
-    //   }
-
-    //   input, textarea {
-    //     width: 100%;
-    //     height: 2rem;
-    //     font-size: 0.9rem;
-    //   }
-
-    //   input#id_is_completed {
-    //     width: 30px;
-    //   }
-  
-    //   textarea {
-    //     height: 200px;
-    //   }
-  
-    //   label {
-    //     font-size: 1.2rem;
-    //     font-weight: bold;
-    //     width: 100%;
-    //   }
-    // }
-
-    
+    @include post(100%, 100%);
 
   }
 }
