--- a/app/project/community/static/community/styles/styles.css
+++ b/app/project/community/static/community/styles/styles.css
@@ -235,6 +235,56 @@ main#profile .modal .modal-content .close-btn {
   cursor: pointer;
   font-size: 3rem;
 }
+main#profile .modal .modal-content .post {
+  border-radius: 8px;
+  border: 1px solid #000000;
+  width: 100%;
+  padding-bottom: 12px;
+}
+main#profile .modal .modal-content .post .post-img {
+  width: 100%;
+  min-width: 300px;
+  height: 30vw;
+  min-height: 200px;
+  background-color: lightblue;
+  border-radius: 8px 8px 0 0;
+  border-bottom: 1px solid #000000;
+}
+main#profile .modal .modal-content .post .post-btns {
+  display: flex;
+  gap: 12px;
+  padding: 8px;
+}
+main#profile .modal .modal-content .post .post-btns button {
+  background-color: rgba(255, 255, 255, 0);
+  padding: 0;
+  margin: 0;
+}
+main#profile .modal .modal-content .post .post-btns button img {
+  width: 20px;
+  height: 20px;
+}
+main#profile .modal .modal-content .post .post-likes, main#profile .modal .modal-content .post .post-caption,
+main#profile .modal .modal-content .post .post-comments, main#profile .modal .modal-content .post .post-date {
+  padding: 0 8px;
+}
+main#profile .modal .modal-content .post .post-caption {
+  margin: 12px 0;
+}
+main#profile .modal .modal-content .post .post-caption .username {
+  font-weight: 700;
+}
+main#profile .modal .modal-content .post .post-comments {
+  font-size: 0.9rem;
+}
+main#profile .modal .modal-content .post .post-comments:hover {
+  cursor: pointer;
+}
+main#profile .modal .modal-content .post .post-date {
+  font-weight: 300;
+  font-size: 0.8rem;
+  padding-top: 8px;
+}
 
 @media only screen and (max-width: 400px) {
   main#profile div.profile-top {
