--- a/app/project/community/templates/community/profile.html
+++ b/app/project/community/templates/community/profile.html
@@ -108,7 +108,9 @@
         <span class="close-btn" onclick="closeModal('#viewPostModal')">&times;</span>
         <div id="modalContent">
           <div class="post">
-            <div class="post-img"></div>
+            <div class="post-img">
+              <img src="{% static './community/images/test.jpeg' %}" alt="">
+            </div>
             <div class="post-btns">
               <button class="post-like-btn"><img src="{% static './community/images/like-icon.svg'%}" alt="like button"></button>
               <button class="post-comment-btn"><img src="{% static './community/images/comments-icon.svg'%}" alt="comment button"></button>
