--- a/app/project/community/templates/community/profile.html
+++ b/app/project/community/templates/community/profile.html
@@ -131,7 +131,7 @@
 </main>
 {% else %}
 <main>
-  <p>You don't have a user profile.</p>
+  <p>You haven't created your user profile yet.</p>
 </main>
 {% endif %}
 <script>
